# my_printf

./: CMakeLists.txt  Makefile  test
criterion/: cri_include.h  cri_my_printf.c  unit_tests_my_printf.c  unit_tests_my_printf.h
include/: get_args.h  main.h  my.h  my_printf.h  spec_flags.h
include/my/: my_put_nbr.c  my_put_nbr_base.c  my_put_nbr_base_long.c  my_put_nbr_base_unsigned_long.c  my_put_unsigned_nbr.c  my_putchar.c  my_putchar_error.c  my_putstr.c  my_putstr_error.c  my_strlen.c
lib/my/: Makefile  my_atoi.c  my_itob.c  my_nb_to_base.c  my_putchar.c  my_putstr.c  my_putstrerr.c  my_revstr.c  my_strlen.c  my_utob.c
src/: a.out  get_flags.c  main.c  my_printf.c
src/flags/: b_flag.c  c_flag.c  d_flag.c  i_flag.c  o_flag.c  p_flag.c  percent_flag.c  s_flags.c  u_flag.c  x_flags.c
